# Deep-Learning

./: pyproject.toml
Backpropagation/: classification.ipynb  regression-keras.ipynb  regression.ipynb
Perceptron/: 3.Perceptron-loss.ipynb  perceptron-problem.ipynb  perceptron.ipynb  placement_data.csv
Transformers/: 3.scaledDotProductAttention.ipynb
